--- a/packages/keeper/config/config.example.json
+++ b/packages/keeper/config/config.example.json
@@ -8,6 +8,7 @@
   "marginlyKeeperAaveAddress": "0x13d1bD42884585d0D00121E596b3733B47152FeB",
   "marginlyPools": [
     {
+      "type": "aave",
       "address": "0x7D3c686CeaFD6e36198BA2fE96091c9eB5FBbd45",
       "minProfitQuote": "20",
       "minProfitBase": "0.05"
